// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`document-library-preview-document renders a document previewer with nineteen pages and the fifth page rendered 1`] = `
<DocumentFragment>
  <div
    class="preview-file"
  >
    <div
      class="preview-file-container preview-file-max-height"
    >
      <img
        class="preview-file-document preview-file-document-fit"
        src="/document-images/5"
      />
    </div>
    <div
      class="preview-toolbar-container"
    >
      <div
        class="floating-bar btn-group"
        role="group"
      >
        <div
          class="btn-group"
          role="group"
        >
          <button
            class="btn-floating-bar btn-floating-bar-text btn btn-primary"
            title="click-to-jump-to-a-page"
            type="button"
          >
            page 5 / 19
          </button>
        </div>
        <button
          class="btn-floating-bar btn btn-monospaced btn-primary"
          title="page-above"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-top"
            role="presentation"
          >
            <use
              xlink:href="#caret-top"
            />
          </svg>
        </button>
        <button
          class="btn-floating-bar btn btn-monospaced btn-primary"
          title="page-below"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom"
            role="presentation"
          >
            <use
              xlink:href="#caret-bottom"
            />
          </svg>
        </button>
        <div
          class="separator-floating-bar"
        />
        <button
          class="btn-floating-bar btn btn-monospaced btn-primary"
          title="expand"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-full-size"
            role="presentation"
          >
            <use
              xlink:href="#full-size"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`document-library-preview-document renders a document previewer with ten pages and the first page rendered 1`] = `
<DocumentFragment>
  <div
    class="preview-file"
  >
    <div
      class="preview-file-container preview-file-max-height"
    >
      <img
        class="preview-file-document preview-file-document-fit"
        src="/document-images/1"
      />
    </div>
    <div
      class="preview-toolbar-container"
    >
      <div
        class="floating-bar btn-group"
        role="group"
      >
        <div
          class="btn-group"
          role="group"
        >
          <button
            class="btn-floating-bar btn-floating-bar-text btn btn-primary"
            title="click-to-jump-to-a-page"
            type="button"
          >
            page 1 / 10
          </button>
        </div>
        <button
          class="btn-floating-bar btn btn-monospaced btn-primary"
          disabled=""
          title="page-above"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-top"
            role="presentation"
          >
            <use
              xlink:href="#caret-top"
            />
          </svg>
        </button>
        <button
          class="btn-floating-bar btn btn-monospaced btn-primary"
          title="page-below"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom"
            role="presentation"
          >
            <use
              xlink:href="#caret-bottom"
            />
          </svg>
        </button>
        <div
          class="separator-floating-bar"
        />
        <button
          class="btn-floating-bar btn btn-monospaced btn-primary"
          title="expand"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-full-size"
            role="presentation"
          >
            <use
              xlink:href="#full-size"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
